[project]
name = "comfyui-smooth-step-lora-loader"
description = "This custom node provides a smooth step function that normalizes LoRA values by enhancing elements above the mean while reducing those below it. Users can independently control both the LoRA strength and smooth step intensity to fine-tune their results, though the effectiveness may vary between different seeds and LoRA types."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/neph1/comfyui-smooth-step-lora-loader"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "neph1"
DisplayName = "comfyui-smooth-step-lora-loader"
Icon = ""
